@@ -100,16 +100,15 @@ class DebianBuildManager(BuildManager):
         The primary file we care about is the .changes file. We key from there.
         """
         path = self.getChangesFilename()
-        name = os.path.basename(path)
+        self._slave.addWaitingFile(path)
+
         chfile = open(path, "r")
-        self._slave.waitingfiles[name] = self._slave.storeFile(chfile.read())
-        chfile.seek(0)
-
-        for fn in self._parseChangesFile(chfile):
-            self._slave.addWaitingFile(
-                get_build_path(self.home, self._buildid, fn))
-
-        chfile.close()
+        try:
+            for fn in self._parseChangesFile(chfile):
+                self._slave.addWaitingFile(
+                    get_build_path(self.home, self._buildid, fn))
+        finally:
+            chfile.close()
 
     def iterate(self, success):
         # When a Twisted ProcessControl class is killed by SIGTERM,
