@@ -3,6 +3,8 @@ launchpad-buildd (116) UNRELEASED; urgency=low
   [ Colin Watson ]
   * Remove obsolete BuilderStatus.ABORTED.
   * Remove obsolete BuildDSlave.fetchFile method, unused since October 2005.
+  * Don't attempt to read entire files into memory at once when storing them
+    in the file cache.
 
   [ Adam Conrad ]
   * Tidy up log formatting of the "Already reaped..." message. 
